--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,7 @@ python = "<3.9,>=3.8"
 logging-tree = "^1.8"
 pyacoustid = "^1.1"
 python-vlc = "^3.0"
-graphql-py = "^0.8.1"
 prompt_toolkit = "^3.0.2"
-watchdog = "^1.0.2"
-youtube-dl = "^2020.1.24"
 python-slugify = "^4.0.0"
 mutagen = "^1.44.0"
 pydub = "^0.24.0"
@@ -26,11 +23,14 @@ colorlog = "^4.1.0"
 attrs = "^20.1.0"
 requests = "^2.24.0"
 jellyfish = "^0.8.2"
-click-skeleton = "^0.9"
 spotipy = "^2.16.0"
 progressbar2 = "^3.53.1"
 humanize = "^3.0.1"
-prettytable = "^2.0.0"
+click-skeleton = "^0.11"
+prettytable = "^2.1.0"
+youtube_dl = "^2021.3.3"
+watchdog = "^2.0.2"
+graphql-py = "^0.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
@@ -39,11 +39,11 @@ dephell = "^0.8.3"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
 pylint = "^2.6.0"
-pytype = "^2020.8.28"
 Pygments = "^2.7.0"
 flake8 = "^3.8.3"
 pytest-docker-compose = "^3.1.2"
-mypy = "^0.790"
+pytype = "^2021.2.23"
+mypy = "^0.812"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
