--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,9 @@ name = "musicbot"
 version = "0.7.5"
 description = "Music swiss army knife"
 authors = ["Adrien Pensart <crunchengine@gmail.com>"]
+maintainers = ["Adrien Pensart <crunchengine@gmail.com>"]
+homepage = "https://github.com/AdrienPensart/musicbot"
 license = "MIT"
-readme = "README.rst"
 
 [tool.poetry.scripts]
 musicbot = 'musicbot.main:main'
@@ -16,14 +17,11 @@ logging-tree = "^1.8"
 pyacoustid = "^1.1"
 python-vlc = "^3.0"
 prompt_toolkit = "^3.0.2"
-python-slugify = "^4.0.0"
 mutagen = "^1.44.0"
-attrs = "^20.1.0"
 requests = "^2.24.0"
 spotipy = "^2.16.0"
 progressbar2 = "^3.53.1"
 humanize = "^3.0.1"
-click-skeleton = "^0.13"
 prettytable = "^2.1.0"
 youtube_dl = "^2021.3.3"
 watchdog = "^2.0.2"
@@ -32,11 +30,15 @@ pydub = "^0.25.1"
 fuzzywuzzy = "^0.18.0"
 python-Levenshtein = "^0.12.2"
 colorlog = "^5.0.1"
+python-slugify = "^5.0.0"
+attrs = "^21.2.0"
+click-skeleton = "^0.14"
+types-requests = "^2.25.0"
+types-python-slugify = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
 coverage-badge = "^1.0"
-dephell = "^0.8.3"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
 pylint = "^2.6.0"
@@ -44,8 +46,9 @@ Pygments = "^2.7.0"
 flake8 = "^3.8.3"
 pytest-docker-compose = "^3.1.2"
 pytype = "^2021.2.23"
-mypy = "^0.812"
 pytest-timeout = "^1.4.2"
+mypy = "^0.910"
+poetry2setup = "^1.0.0"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
