--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,53 @@
-attrs==20.*,>=20.1.0
-click-skeleton==0.*,>=0.13.0
-colorlog==5.*,>=5.0.1
-fuzzywuzzy==0.*,>=0.18.0
-graphql-py==0.*,>=0.8.1
-humanize==3.*,>=3.0.1
-logging-tree==1.*,>=1.8.0
-mutagen==1.*,>=1.44.0
-prettytable==2.*,>=2.1.0
-progressbar2==3.*,>=3.53.1
-prompt-toolkit==3.*,>=3.0.2
-pyacoustid==1.*,>=1.1.0
-pydub==0.*,>=0.25.1
-python-levenshtein==0.*,>=0.12.2
-python-slugify==4.*,>=4.0.0
-python-vlc==3.*,>=3.0.0
-requests==2.*,>=2.24.0
-spotipy==2.*,>=2.16.0
-watchdog==2.*,>=2.0.2
-youtube-dl==2021.*,>=2021.3.3
+atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" and sys_platform == "win32" or python_version >= "3.6" and python_version <= "3.9" and sys_platform == "win32" and python_full_version >= "3.4.0"
+attrs==21.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+audioread==2.1.9
+certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
+charset-normalizer==2.0.1; python_full_version >= "3.6.0" and python_version >= "3"
+click-aliases==1.0.1; python_version >= "3.6" and python_version <= "3.9"
+click-completion==0.5.2; python_version >= "3.6" and python_version <= "3.9"
+click-didyoumean==0.0.3; python_version >= "3.6" and python_version <= "3.9"
+click-help-colors==0.9.1; python_version >= "3.6" and python_version <= "3.9"
+click-option-group==0.5.3; python_version >= "3.6" and python_version <= "3.9"
+click-skeleton==0.14; python_version >= "3.6" and python_version <= "3.9"
+click==8.0.1; python_version >= "3.6" and python_version <= "3.9"
+colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version <= "3.9" and platform_system == "Windows" or python_full_version >= "3.5.0" and sys_platform == "win32" and python_version >= "3.6" and python_version <= "3.9" and platform_system == "Windows"
+colorlog==5.0.1
+fuzzywuzzy==0.18.0
+graphql-py==0.8.1
+humanize==3.10.0; python_version >= "3.6"
+idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
+iniconfig==1.1.1; python_version >= "3.6" and python_version <= "3.9"
+jinja2==3.0.1; python_version >= "3.6" and python_version <= "3.9"
+logging-tree==1.9
+markupsafe==2.0.1; python_version >= "3.6" and python_version <= "3.9"
+munch==2.5.0; python_version >= "3.6" and python_version <= "3.9"
+mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
+packaging==21.0; python_version >= "3.6" and python_version <= "3.9"
+pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
+ply==3.11
+prettytable==2.1.0; python_version >= "3.6"
+progressbar2==3.53.1
+prompt-toolkit==3.0.19; python_full_version >= "3.6.1"
+py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
+pyacoustid==1.2.0
+pydub==0.25.1
+pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.3.0"
+pytest-click==1.0.2; python_version >= "3.6" and python_version <= "3.9"
+pytest==6.2.4; python_version >= "3.6" and python_version <= "3.9"
+python-levenshtein==0.12.2
+python-slugify==5.0.2; python_version >= "3.6"
+python-utils==2.5.6
+python-vlc==3.0.12118
+requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+semver==2.13.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
+shellingham==1.4.0; python_version >= "3.6" and python_version <= "3.9"
+six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.3.0"
+spotipy==2.18.0
+text-unidecode==1.3; python_version >= "3.6"
+toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.3.0"
+types-python-slugify==0.1.1
+types-requests==2.25.0
+urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
+watchdog==2.1.3; python_version >= "3.6"
+wcwidth==0.2.5; python_full_version >= "3.6.1" and python_version >= "3.6"
+youtube-dl==2021.6.6
