--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-astroid==2.6.5; python_version >= "3.6" and python_version < "4.0"
+astroid==2.6.6; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" and sys_platform == "win32" or python_version >= "3.6" and python_version <= "3.9" and sys_platform == "win32" and python_full_version >= "3.4.0"
 attrs==21.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
@@ -6,21 +6,20 @@ bcrypt==3.2.0; python_version >= "3.6"
 bump2version==1.0.1; python_version >= "3.5"
 certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 cffi==1.14.6; python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0")
-charset-normalizer==2.0.3; python_full_version >= "3.6.0" and python_version >= "3"
+charset-normalizer==2.0.4; python_full_version >= "3.6.0" and python_version >= "3"
 click-aliases==1.0.1; python_version >= "3.6" and python_version <= "3.9"
 click-completion==0.5.2; python_version >= "3.6" and python_version <= "3.9"
 click-didyoumean==0.0.3; python_version >= "3.6" and python_version <= "3.9"
 click-help-colors==0.9.1; python_version >= "3.6" and python_version <= "3.9"
 click-option-group==0.5.3; python_version >= "3.6" and python_version <= "3.9"
-click-skeleton==0.14; python_version >= "3.6" and python_version <= "3.9"
+click-skeleton==0.15; python_version >= "3.6" and python_version <= "3.9"
 click==8.0.1; python_version >= "3.6" and python_version <= "3.9"
 colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version <= "3.9" and platform_system == "Windows" or python_full_version >= "3.5.0" and sys_platform == "win32" and python_version >= "3.6" and python_version <= "3.9" and platform_system == "Windows"
 colorlog==5.0.1
 coverage-badge==1.0.1
 coverage==5.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
 cryptography==3.4.7; python_version >= "3.6"
-cycler==0.10.0; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.0"
-distro==1.5.0; python_version >= "3.4"
+distro==1.6.0; python_version >= "3.4"
 docker-compose==1.29.2; python_version >= "3.4"
 docker==5.0.0; python_version >= "3.6"
 dockerpty==0.4.1; python_version >= "3.4"
@@ -29,30 +28,22 @@ docutils==0.17.1; python_version >= "2.7" and python_full_version < "3.0.0" or p
 flake8==3.9.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 fuzzywuzzy==0.18.0
 graphql-py==0.8.1
-humanize==3.10.0; python_version >= "3.6"
+humanize==3.11.0; python_version >= "3.6"
 idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-importlab==0.6.1; python_version >= "3.6" and python_version < "3.10" and python_full_version >= "3.6.0"
 iniconfig==1.1.1; python_version >= "3.6" and python_version <= "3.9"
-isort==5.9.2; python_full_version >= "3.6.1" and python_version < "4.0" and python_version >= "3.6"
+isort==5.9.3; python_full_version >= "3.6.1" and python_version < "4.0" and python_version >= "3.6"
 jinja2==3.0.1; python_version >= "3.6" and python_version <= "3.9"
 jsonschema==3.2.0; python_version >= "3.4"
-kiwisolver==1.3.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.0"
 lazy-object-proxy==1.6.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
 logging-tree==1.9
 markupsafe==2.0.1; python_version >= "3.6" and python_version <= "3.9"
-matplotlib==3.4.2; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.0"
 mccabe==0.6.1; python_version >= "3.6" and python_version < "4.0" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0")
 munch==2.5.0; python_version >= "3.6" and python_version <= "3.9"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
 mypy-extensions==0.4.3; python_version >= "3.5"
 mypy==0.910; python_version >= "3.5"
-networkx==2.6.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.0"
-ninja==1.10.0.post3; python_version >= "3.6" and python_version < "3.10"
-numpy==1.21.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.1"
 packaging==21.0; python_version >= "3.6" and python_version <= "3.9"
-pandas==1.3.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.1"
 paramiko==2.7.2; python_version >= "3.6"
-pillow==8.3.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.0"
 pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
 ply==3.11
 poetry-core==1.0.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
@@ -67,38 +58,33 @@ pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or py
 pydub==0.25.1
 pyflakes==2.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pygments==2.9.0; python_version >= "3.5"
-pylint==2.9.5; python_version >= "3.6" and python_version < "4.0"
+pylint==2.9.6; python_version >= "3.6" and python_version < "4.0"
 pynacl==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0"
-pyparsing==2.4.7; python_version >= "3.7" and python_version <= "3.9" and python_full_version >= "3.6.0"
+pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.3.0"
 pyrsistent==0.18.0; python_version >= "3.6"
 pytest-click==1.0.2; python_version >= "3.6" and python_version <= "3.9"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-docker-compose==3.2.1
 pytest-timeout==1.4.2
 pytest==6.2.4; python_version >= "3.6" and python_version <= "3.9" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
-python-dateutil==2.8.2; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.1"
 python-dotenv==0.19.0; python_version >= "3.5"
 python-levenshtein==0.12.2
 python-slugify==5.0.2; python_version >= "3.6"
 python-utils==2.5.6
 python-vlc==3.0.12118
-pytype==2021.7.19; python_version >= "3.6" and python_version < "3.10"
-pytz==2021.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.1"
 pywin32==227; sys_platform == "win32" and python_version >= "3.6"
-pyyaml==5.4.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.10" or python_version >= "3.6" and python_version < "3.10" and python_full_version >= "3.6.0"
+pyyaml==5.4.1; python_version >= "3.4" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.4"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 restructuredtext-lint==1.3.2
-scipy==1.7.0; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.0"
 semver==2.13.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
 shellingham==1.4.0; python_version >= "3.6" and python_version <= "3.9"
-six==1.16.0; python_version >= "3.7" and python_version <= "3.9" and python_full_version >= "3.6.0"
+six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
 spotipy==2.18.0
 text-unidecode==1.3; python_version >= "3.6"
 texttable==1.6.4; python_version >= "3.4"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.5.0"
-typed-ast==1.4.3; python_version >= "3.6" and python_version < "3.10"
-types-python-slugify==0.1.1
-types-requests==2.25.0
+types-python-slugify==0.1.2
+types-requests==2.25.6
 typing-extensions==3.10.0.0; python_version >= "3.5"
 urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
 watchdog==2.1.3; python_version >= "3.6"
