--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-astroid==2.6.6; python_version >= "3.6" and python_version < "4.0"
+astroid==2.7.2; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" and sys_platform == "win32" or python_version >= "3.6" and python_version <= "3.9" and sys_platform == "win32" and python_full_version >= "3.4.0"
 attrs==21.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
@@ -44,21 +44,22 @@ mypy-extensions==0.4.3; python_version >= "3.5"
 mypy==0.910; python_version >= "3.5"
 packaging==21.0; python_version >= "3.6" and python_version <= "3.9"
 paramiko==2.7.2; python_version >= "3.6"
+platformdirs==2.2.0; python_version >= "3.6" and python_version < "4.0"
 pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
 ply==3.11
-poetry-core==1.0.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+poetry-core==1.0.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 poetry2setup==1.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 prettytable==2.1.0; python_version >= "3.6"
 progressbar2==3.53.1
-prompt-toolkit==3.0.19; python_full_version >= "3.6.1"
+prompt-toolkit==3.0.20; python_full_version >= "3.6.2"
 py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
-pyacoustid==1.2.0
+pyacoustid==1.2.1
 pycodestyle==2.7.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0"
 pydub==0.25.1
 pyflakes==2.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-pygments==2.9.0; python_version >= "3.5"
-pylint==2.9.6; python_version >= "3.6" and python_version < "4.0"
+pygments==2.10.0; python_version >= "3.5"
+pylint==2.10.2; python_version >= "3.6" and python_version < "4.0"
 pynacl==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0"
 pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.3.0"
 pyrsistent==0.18.0; python_version >= "3.6"
@@ -87,8 +88,8 @@ types-python-slugify==0.1.2
 types-requests==2.25.6
 typing-extensions==3.10.0.0; python_version >= "3.5"
 urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
-watchdog==2.1.3; python_version >= "3.6"
-wcwidth==0.2.5; python_full_version >= "3.6.1" and python_version >= "3.6"
+watchdog==2.1.4; python_version >= "3.6"
+wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
 websocket-client==0.59.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 wrapt==1.12.1; python_version >= "3.6" and python_version < "4.0"
 youtube-dl==2021.6.6
